— Has updated the reference (in README.md) — Complete Composer and Twig Installer

--- a/package.json
+++ b/package.json
@@ -1,79 +1,12 @@
 {
-  "name": "makeup-to-ng2",
+  "name": "Gulp-TwigPHP",
   "version": "1.0.0",
-  "description": "Start-kit cybernetica team",
-  "scripts": {
-    "foo": "npm install"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/koshevy/makeup-to-ng2.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/koshevy/makeup-to-ng2/issues"
-  },
-  "homepage": "https://github.com/koshevy/makeup-to-ng2#readme",
-  "dependencies": {
-    "bootstrap": "^4.0.0-alpha.2",
-    "bootstrap-slider": "^7.1.0",
-    "dotdotdot": "^1.7.0",
-    "jquery": "^2.2.3",
-    "jquery.maskedinput": "^1.4.1",
-    "malihu-custom-scrollbar-plugin": "^3.1.3",
-    "nanoscroller": "^0.8.7",
-    "node-sass": "^3.6.0",
-    "normalize.css": "^4.1.1",
-    "owl.carousel": "^2.1.1",
-    "packery": "^2.1.0",
-    "swiper": "^3.3.1",
-    "tether": "^1.2.4",
-    "tether-drop": "^1.4.2",
-    "tether-select": "^1.1.0",
-    "tether-tooltip": "^1.2.0",
-    "jquery-touch-events": "git+https://github.com/benmajor/jQuery-Touch-Events.git",
-    "dragula": "^3.7.1"
-  },
+  "description": "Plugin for Gulp provides integration with Twig original PHP implementation",
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "browser-sync": "^2.14.0",
-    "del": "^2.2.2",
-    "es6-promise": "^3.2.1",
-    "fs": "0.0.1-security",
-    "gulp": "^3.9.1",
-    "gulp-cache": "^0.4.5",
-    "gulp-clean-css": "^2.0.12",
-    "gulp-concat": "^2.6.0",
-    "gulp-consolidate": "^0.2.0",
-    "gulp-csscomb": "^3.0.7",
-    "gulp-debug": "^2.1.2",
-    "gulp-folders": "^1.1.0",
-    "gulp-frontnote": "^1.0.3",
-    "gulp-iconfont": "^8.0.1",
-    "gulp-iconfont-css": "^2.1.0",
-    "gulp-imagemin": "^3.0.3",
-    "gulp-logger":"^0.0.2",
-    "gulp-merge-media-queries": "^0.2.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.1.1",
-    "gulp-pxtorem": "^2.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-recursive-folder":"^0.9.4",
-    "gulp-replace-path": "^0.4.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-svg-sprite": "^1.3.5",
-    "gulp-svgicons2svgfont": "^3.0.1",
-    "gulp-svgmin": "^1.2.2",
-    "shellton": "^2.1.0",
     "gulp-util":"^3.0.7",
-    "twig": "0.9.5",
-    "gulp-twig": "^0.5.0",
-    "gulp-uglify": "^2.0.0",
+    "fs": "0.0.1-security",
     "lodash": "^4.15.0",
-    "postcss-pxtorem": "^3.3.1",
-    "node-twig": "^1.1.0"
+    "shellton": "^2.1.0",
+    "through2": "^2.0.1"
   }
 }
