--- a/package.json
+++ b/package.json
@@ -1,12 +1,35 @@
 {
   "name": "gulp-twig-php",
-  "version": "0.1.3",
-  "description": "Plugin for Gulp: provides integration with Twig original PHP implementation",
+  "version": "0.1.4",
+  "description": "Gulp plugin for original Twig",
   "devDependencies": {
-    "gulp-util":"^3.0.7",
     "file-exists": "^2.0.0",
     "lodash": "^4.15.0",
     "shellton": "^2.1.0",
     "through2": "^2.0.1"
-  }
+  },
+  "scripts": {
+    "install": "sh ./install-twig.sh"
+  },
+  "homepage": "http://github.com/koshevy/gulp-twig-php",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/koshevy/gulp-twig-php.git"
+  },
+  "bugs": {
+    "url": "http://github.com/koshevy/gulp-twig-php/issues"
+  },
+  "author": "koshevy <koshevy@gmail.com>",
+  "keywords": [
+    "gulp",
+    "gulp-plugin",
+    "gulpplugin",
+    "twig",
+    "twig-js",
+    "tempate",
+    "tempating",
+    "tempate engine"
+  ],
+  "license": "MIT",
+  "readmeFilename": "README.md"
 }
